# clashctl

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.circleci/: config.yml
.config/: hakari.toml
.github/: config.yaml
.github/workflows/: audit.yaml  check.yaml  clippy.yaml  release.yaml  todo.yaml
clashctl/: Cargo.toml
clashctl-bin/: Cargo.toml
clashctl-bin/src/: main.rs
clashctl-cli/: Cargo.toml
clashctl-cli/src/: error.rs  lib.rs  main.rs  proxy_render.rs
clashctl-cli/src/command/: mod.rs  proxy.rs
clashctl-core/: Cargo.toml  README.md
clashctl-core/src/: api.rs  error.rs  lib.rs
clashctl-core/src/model/: config.rs  connection.rs  log.rs  mod.rs  proxy.rs  rule.rs
clashctl-core/src/test/: api.rs
clashctl-interactive/: Cargo.toml  README.md
clashctl-interactive/src/: config.rs  error.rs  flags.rs  lib.rs  tui_opt.rs
clashctl-interactive/src/sort/: con_sort.rs  mod.rs  proxy_sort.rs  rule_sort.rs
clashctl-tui/: Cargo.toml
clashctl-tui/src/: app.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  servo.rs  state.rs  tui_opt.rs
clashctl-tui/src/components/: block_footer.rs  constants.rs  mod.rs  tabs.rs  traffic.rs
clashctl-tui/src/components/movable_list/: state.rs  widget.rs
clashctl-tui/src/components/proxy/: group.rs  item.rs  sort.rs  tree.rs
clashctl-tui/src/pages/: config.rs  connection.rs  debug.rs  mod.rs  rule.rs  status.rs
clashctl-tui/src/utils/: as_color.rs  coord.rs  ext.rs  helper.rs  mod.rs  pulse.rs  ticks_counter.rs  tui_logger.rs  wrap.rs
clashctl-workspace-hack/: Cargo.toml
clashctl/src/: api.rs  error.rs  lib.rs  main.rs  proxy_render.rs  utils.rs
clashctl/src/command/: completion.rs  mod.rs  proxy.rs  server.rs
clashctl/src/interactive/: config.rs  config_model.rs  error.rs  flags.rs  mod.rs
clashctl/src/interactive/sort/: con_sort.rs  mod.rs  proxy_sort.rs  rule_sort.rs
clashctl/src/model/: config.rs  mod.rs  proxy.rs  traffic.rs
clashctl/src/ui/: action.rs  app.rs  config.rs  error.rs  event.rs  main.rs  mod.rs  servo.rs  state.rs
clashctl/src/ui/components/: block_footer.rs  mod.rs  tabs.rs  traffic.rs
clashctl/src/ui/components/movable_list/: item.rs  mod.rs  state.rs  widget.rs
clashctl/src/ui/components/proxy/: group.rs  mod.rs  sort.rs  tree.rs  tree_widget.rs
clashctl/src/ui/pages/: connection.rs  debug.rs  log.rs  mod.rs  proxy.rs  rule.rs  status.rs
clashctl/src/ui/utils/: as_color.rs  hms.rs  interval.rs  mod.rs  ticks_counter.rs  tui_logger.rs
src/: api.rs  cli.rs  error.rs  lib.rs  main.rs
src/cli/: cmd.rs  config.rs  mod.rs  proxy_render.rs  server.rs  utils.rs
src/cli/command/: completion.rs  mod.rs  proxy.rs  server.rs
src/cli/ui/: app.rs  event.rs  mod.rs  servo.rs  state.rs  utils.rs
src/cli/ui/components/: mod.rs  movable_list.rs  proxy.rs  tabs.rs  traffic.rs  utils.rs
src/cli/ui/pages/: config.rs  debug.rs  log.rs  mod.rs  proxies.rs  status.rs
src/interactive/: con_sort.rs  config.rs  flags.rs  mod.rs  paths.rs  proxy_sort.rs  rule_sort.rs  sort.rs
src/model/: config.rs  connection.rs  log.rs  mod.rs  proxy.rs  rule.rs  traffic.rs
src/test/: api.rs  mod.rs  models.rs  ui.rs
src/ui/: app.rs  event.rs  mod.rs  servo.rs  state.rs  utils.rs
src/ui/components/: block_footer.rs  constants.rs  mod.rs  movable_list.rs  proxy.rs  sparkline.rs  tabs.rs  traffic.rs  utils.rs
src/ui/components/movable_list/: item.rs  mod.rs  state.rs  widget.rs
src/ui/components/proxy/: group.rs  item.rs  mod.rs  sort.rs  tree.rs  tree_widget.rs
src/ui/pages/: config.rs  connection.rs  connections.rs  debug.rs  log.rs  mod.rs  proxies.rs  proxy.rs  rule.rs  rules.rs  status.rs
src/ui/utils/: as_color.rs  ext.rs  helper.rs  macros.rs  mod.rs  ticks_counter.rs  tui_logger.rs
