[package]
name         = "clashctl"
description  = "A CLI to interact with clash RESTful API"
version      = "0.1.0"
authors      = ["George Miao <gm@miao.dev>"]
repository   = "https://github.com/George-Miao/clashctl"
license      = "MIT"
edition      = "2021"
keywords     = ["clash", "cli"]
categories   = ["command-line-utilities"]

[features]
cli = [
  "terminal_size", 
  "clap_generate", 
  "env_logger",
  "owo-colors", 
  "requestty", 
  "clap", 
  "home",
  "ron"
]

[[bin]]
name              = "clashctl"
required-features = ["cli"]

[dependencies]
log        = "~0.4"
serde_json = "~1.0"
thiserror  = "~1.0"
attohttpc  = "~0.18"
chrono     = { version = "~0.4", features = ["serde"] }
serde      = { version = "~1.0", features = ["derive"] }
tokio      = { version = "~1.12", features = ["macros"] }
url        = { version = "~2.2", features = ["serde"] }
semver     = { version = "~1.0", features = ["serde"] }

# Dependencies required by CLI
terminal_size = { version = "~0.1", optional = true }
clap_generate = { version = "~3.0.0-beta.5", optional = true }
clap          = { version = "~3.0.0-beta.5", optional = true }
owo-colors    = { version = "~3.0", optional = true }
env_logger    = { version = "~0.9", optional = true }
requestty     = { version = "~0.1", optional = true }
home          = { version = "~0.5", optional = true }
ron           = { version = "~0.7", optional = true }

[dev-dependencies]
simple_logger = "*"

