[package]
name = "clashctl-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clashctl-tui         = { path = "../clashctl-tui" }
clashctl-cli         = { path = "../clashctl-cli", features = ["tui"] }
clashctl-interactive = { path = "../clashctl-interactive" }
workspace-hack       = { version = "0.1", path = "../clashctl-workspace-hack" }

log = { version = "~0.4", features = ["std"] }
