[package]
name = "clashctl-bin"
description = "Tui & Cli used to interact with Clash RESTful API"
version = "0.3.0-alpha.3"
authors = ["George Miao <gm@miao.dev>"]
repository = "https://github.com/George-Miao/clashctl"
license = "MIT"
edition = "2021"
keywords = ["clash", "api", "cli", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clashctl-tui         = { path = "../clashctl-tui" }
clashctl-cli         = { path = "../clashctl-cli", features = ["tui"] }
clashctl-interactive = { path = "../clashctl-interactive" }
workspace-hack       = { version = "0.1", path = "../clashctl-workspace-hack" }

log = { version = "~0.4", features = ["std"] }
