[package]
name = "clashctl-cli"
version = "0.3.0-alpha.3"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tui = []


[dependencies]
clashctl-tui = { path = "../clashctl-tui", optional = true }
clashctl-interactive = { path = "../clashctl-interactive", features = ["cli"] }
workspace-hack       = { version = "0.1", path = "../clashctl-workspace-hack" }

log           = { version = "~0.4", features = ["std"] }
url           = { version = "~2.2", features = ["serde"] }
thiserror     = { version = "~1.0"}
terminal_size = { version = "~0.1" }
owo-colors    = { version = "~3.0" }
env_logger    = { version = "~0.9" }
requestty     = { version = "~0.1" }
either        = { version = "~1.6.1" }
clap          = { version = "~3.0.0-beta.5" }
clap_generate = { version = "~3.0.0-beta.5" }

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
simple_logger = "1.13.0"
