[package]
authors     = ["George Miao <gm@miao.dev>"]
categories  = ["command-line-utilities"]
description = "Tui used to interact with Clash RESTful API"
edition     = "2021"
keywords    = ["clash", "api", "cli", "tui"]
license     = "MIT"
name        = "clashctl-tui"
repository  = "https://github.com/George-Miao/clashctl"
version     = "0.4.1"
readme      = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tui           = { version = "0.16.0", default-features = false, features = [ 'crossterm' ] }
clap          = { version = "3.0.0-rc.4", features = ["derive"] }
chrono        = { version = "0.4", features = ["serde"] }
log           = { version = "0.4", features = ["std"] }
bytesize      = { version = "1.1.0" }
crossterm     = { version = "0.22.1" }
itertools     = { version = "0.10.1" }
match_any     = { version = "1.0.1" }
paste         = { version = "1.0.6" }
rayon         = { version = "1.5.1" }
thiserror     = { version = "1.0.0" }
owo-colors    = { version = "3.0.0" }
simple-mutex  = { version = "1.1.5" }
unicode-width = { version = "0.1.9" }
smart-default = { version = "0.6.0" }
once_cell     = { version = "1.13.0"}
# clashctl-interactive = "0.3.3"
clashctl-interactive = { path = "../clashctl-interactive" }
workspace-hack = { version = "0.1", path = "../clashctl-workspace-hack" }
