[package]
name = "clashctl"
description = "Cli & Tui used to interact with Clash RESTful API"
version = "0.3.1"
authors = ["George Miao <gm@miao.dev>"]
repository = "https://github.com/George-Miao/clashctl"
license = "MIT"
edition = "2021"
keywords = ["clash", "api", "cli", "tui"]
categories = ["command-line-utilities"]
default-run = "clashctl"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log           = { version = "~0.4", features = ["std"] }
url           = { version = "~2.2", features = ["serde"] }
thiserror     = { version = "~1.0" }
terminal_size = { version = "~0.1" }
owo-colors    = { version = "~3.0" }
env_logger    = { version = "~0.9" }
requestty     = { version = "~0.1" }
either        = { version = "~1.6.1" }
clap          = { version = "~3.0.0-rc.4", features = ["derive", "cargo"] }
clap_generate = { version = "~3.0.0-rc.4" }

# clashctl-tui         = { path = "../clashctl-tui" }
clashctl-tui         = "0.3.1"
# clashctl-interactive = { path = "../clashctl-interactive" }
clashctl-interactive = "0.3.0"

workspace-hack       = { version = "0.1", path = "../clashctl-workspace-hack" }

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
simple_logger = "1.13.0"
