[package]
name = "clashctl"
description = "Cli & Tui used to interact with Clash RESTful API"
version = "0.3.2"
authors = ["George Miao <gm@miao.dev>"]
repository = "https://github.com/George-Miao/clashctl"
license = "MIT"
edition = "2021"
keywords = ["clash", "api", "cli", "tui"]
categories = ["command-line-utilities"]
default-run = "clashctl"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log           = { version = "~0.4", features = ["std"] }
url           = { version = "~2.2", features = ["serde"] }
thiserror     = { version = "~1.0" }
terminal_size = { version = "~0.2" }
owo-colors    = { version = "~3.4" }
env_logger    = { version = "~0.9" }
requestty     = { version = "~0.4" }
either        = { version = "~1.7.0" }
clap          = { version = "~3.2.17", features = ["derive", "cargo"] }
clap_complete = { version = "~3.2.4" }

clashctl-tui         = { path = "../clashctl-tui" }
# clashctl-tui         = "0.4.0"
clashctl-interactive = { path = "../clashctl-interactive" }
# clashctl-interactive = "0.3.0"

workspace-hack       = { version = "0.1", path = "../clashctl-workspace-hack" }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
pretty_env_logger = "0.4.0"
